--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -32,6 +32,7 @@ body {
   max-width: 1200px;
   font-family: $font-1;
   color: $black;
+  background-color: rgb(23, 21, 21);
 }
 button {
   cursor: pointer;
