change text color

--- a/src/styles/pages/_knowledge.scss
+++ b/src/styles/pages/_knowledge.scss
@@ -140,7 +140,7 @@
       p {
         text-align: justify;
         padding: 0 1rem;
-        color: black;
+        color: white;
       }
       .exp-1 {
         grid-area: 2;
