--- a/src/styles/pages/_knowledge.scss
+++ b/src/styles/pages/_knowledge.scss
@@ -140,7 +140,7 @@
       p {
         text-align: justify;
         padding: 0 1rem;
-        color: white;
+        color: $white;
       }
       .exp-1 {
         grid-area: 2;
@@ -168,6 +168,9 @@
             span {
               color: $color-5;
             }
+            .fas {
+              background-color: $white;
+            }
             i {
               color: $color-3;
             }
@@ -191,6 +194,7 @@
           span {
             position: absolute;
             transform: translateX(2.2rem);
+            color: $white;
           }
         }
       }
